--- a/frontend/sass/commento-login.scss
+++ b/frontend/sass/commento-login.scss
@@ -29,6 +29,10 @@
       margin: 24px 0px;
     }
 
+    commento-login-box-password-input {
+      color: black;
+    }
+    
     .commento-login-box-subtitle {
       color: $gray-6;
       text-align: center;
