--- a/frontend/sass/commento-login.scss
+++ b/frontend/sass/commento-login.scss
@@ -30,7 +30,7 @@
     }
 
     commento-login-box-password-input {
-      color: black;
+      color: #50596c !important;
     }
     
     .commento-login-box-subtitle {
