--- a/frontend/sass/commento-login.scss
+++ b/frontend/sass/commento-login.scss
@@ -29,7 +29,7 @@
       margin: 24px 0px;
     }
 
-    commento-login-box-password-input {
+    .commento-login-box-password-input {
       color: #50596c !important;
     }
     
